--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,13 @@
                 <button type="submit" class="btn btn-primary">Agregar</button>
               </div>
             </div>
+            <div class="form-group">
+              <label for=""></label>
+              <input type="text"
+                  class="form-control form-control-sm" name="" id="" aria-describedby="helpId" placeholder="">
+              <small id="helpId" class="form-text text-muted">Help text</small>
+            </div>
+            <img src="" class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}" alt="">
           </form>
         </div>
       </div>
