--- a/templates/index.html
+++ b/templates/index.html
@@ -79,6 +79,10 @@
         Creado por Megof
       </div>
     </div>
+    <div class="form-group">
+      <label for=""></label>
+      <input type="password" class="form-control" name="" id="" placeholder="">
+    </div>
   </body>
 </html>
 {{end}}
